[tool.poetry]
name = "security_txt_parser"
version = "0.1.0"
description = ""
authors = ["Ravi Kotecha <kotecha.ravi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
abnf = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipython = "^8.3.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:Pdb"
